--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>p2pSaing</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src *; connect-src * ws://* wss://*; style-src * 'unsafe-inline' 'unsafe-eval'; media-src * ; img-src * data:; font-src * ; script-src * 'unsafe-inline' 'unsafe-eval';" />
-    <meta name="naive-ui-style" />
-  </head>
 
-  <body>
-    <div id="app" style="height: 100vh;"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title><%- title %></title>
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src *; connect-src * ws://* wss://*; style-src * 'unsafe-inline' 'unsafe-eval'; media-src * ; img-src * data:; font-src * ; script-src * 'unsafe-inline' 'unsafe-eval';" />
+  <meta name="naive-ui-style" />
+</head>
+
+<body>
+</body>
+
 </html>
