--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="light">
 
 <head>
   <meta charset="UTF-8" />
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  
 </body>
 
 </html>
