完成好友列表+尝试添加暗色模式

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html class="light">
 
 <head>
@@ -6,15 +6,17 @@
   <title><%- title %></title>
   <meta name="naive-ui-style" />
   <script>
-    window.goHome = () => {
-      window.location.hash = `#/main`
-      location.reload()
-    }
-  </script>
+      window.goHome = () => {
+        window.location.hash = `#/main`
+        location.reload()
+      }
+      // delete window.require
+      // delete window.module
+      // delete window.exports
+      // delete window.process
+    </script>
 </head>
 
-<body>
-
-</body>
+<body></body>
 
 </html>
